cc_library(
    name = "common",
    srcs = ["common.cc"],
    hdrs = ["common.h"],
    deps = [
        "@com_google_absl//absl/debugging:failure_signal_handler",
        "@com_google_absl//absl/debugging:symbolize",
        "@com_google_absl//absl/flags:parse",
        "@com_google_absl//absl/log:initialize",
    ],
)

cc_binary(
    name = "elf2sql",
    srcs = ["elf2sql.cc"],
    deps = [
        ":common",
        "//src/sql:manager",
        "//src/utils:path",
        "//third_party:lief",
        "@SQLiteCpp",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/strings:str_format",
    ],
)

cc_binary(
    name = "sql2elf",
    srcs = ["sql2elf.cc"],
    deps = [
        ":common",
        "//src/sql:manager",
        "//src/utils:path",
        "//src/utils:string",
        "//third_party:lief",
        "@SQLiteCpp",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/strings:str_format",
        "@elfio",
    ],
)

sh_test(
    name = "identity_test",
    srcs = ["identity_test.sh"],
    data = [
        ":elf2sql",
        ":sql2elf",
    ],
    deps = [
        "//tools/bash:unittest",
        # may technically not be needed
        # sh_test may include rlocation itself already
        "@bazel_tools//tools/bash/runfiles",
    ],
)
