load("//tools:nasm.bzl", "nasm_binary")
load("//tools:test_helpers.bzl", "test_return_code")

nasm_binary(
    name = "tiny",
    src = "tiny.asm",
)

test_return_code(
    name = "tiny-test",
    binary = "tiny",
    ret_code = 42,
)

cc_binary(
    name = "teensy-creator",
    srcs = ["teensy.cc"],
)

genrule(
    name = "teensy-bin",
    srcs = ["teensy-creator"],
    outs = ["teensy"],
    cmd = "$(location :teensy-creator) $@",
)

test_return_code(
    name = "teensy-test",
    binary = "teensy-bin",
    ret_code = 42,
)
