load("//tools/nasm:nasm.bzl", "nasm_binary")
load("//tools/build_defs/test:test_helpers.bzl", "test_return_code")

filegroup(
    name = "examples",
    srcs = [
        "teensy-bin",
        # ":hello-world-asm",
        ":tiny",
    ],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "hello-world-c",
    srcs = ["hello_world.c"],
)

nasm_binary(
    name = "hello-world-asm",
    src = "hello_world.asm",
)

nasm_binary(
    name = "tiny",
    src = "tiny.asm",
)

test_return_code(
    name = "tiny-test",
    binary = "tiny",
    ret_code = 42,
)

cc_binary(
    name = "teensy-creator",
    srcs = ["teensy.cc"],
)

genrule(
    name = "teensy-bin",
    srcs = ["teensy-creator"],
    outs = ["teensy"],
    cmd = "$(location :teensy-creator) $@",
)

test_return_code(
    name = "teensy-test",
    binary = "teensy-bin",
    ret_code = 42,
)
