filegroup(
    name = "sql_files",
    srcs = glob([
        "*.sql",
    ]),
)

cc_library(
    name = "common",
    srcs = [
        "common.cc",
    ],
    hdrs = [
        "common.h",
    ],
    data = [
        ":sql_files",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@SQLiteCpp",
        "@bazel_tools//tools/cpp/runfiles",
        "@com_google_absl//absl/strings:str_format",
    ],
)
