filegroup(
    name = "sql_files",
    srcs = glob([
        "**/*.sql",
    ]),
)

cc_library(
    name = "manager",
    srcs = [
        "manager.cc",
    ],
    hdrs = [
        "manager.h",
    ],
    data = [
        ":sql_files",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@SQLiteCpp",
        "@bazel_tools//tools/cpp/runfiles",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
    ],
)
