cc_library(
    name = "path",
    srcs = [
        "path.cc",
    ],
    hdrs = [
        "path.h",
    ],
    visibility = ["//visibility:public"],
    deps = [],
)

cc_library(
    name = "string",
    srcs = [
        "string.cc",
    ],
    hdrs = [
        "string.h",
    ],
    visibility = ["//visibility:public"],
    deps = [],
)
